ctui-components/src/snapshots/ctui_components__table__tests__table_fill_column.snap
---
source: ctui-components/src/table.rs
assertion_line: 665
expression: result
---
ID   Description         
─────────────────────────
1    A long description  
2    Short
