ctui-components/src/snapshots/ctui_components__table__tests__table_header_only.snap
---
source: ctui-components/src/table.rs
assertion_line: 575
expression: result
---
ID   Name      Age  
────────────────────
