ctui-components/src/snapshots/ctui_components__table__tests__table_no_header.snap
---
source: ctui-components/src/table.rs
assertion_line: 600
expression: result
---
X1   Y1   
X2   Y2
