ctui-components/src/snapshots/ctui_components__table__tests__table_percentage_columns.snap
---
source: ctui-components/src/table.rs
assertion_line: 676
expression: result
---
A     B       C     
────────────────────
Left  Middle  Right
