ctui-components/src/snapshots/ctui_components__table__tests__table_scrolled.snap
---
source: ctui-components/src/table.rs
assertion_line: 654
expression: result
---
Num  Value     
───────────────
3    Three     
4    Four
