ctui-components/src/snapshots/ctui_components__table__tests__table_selection_first.snap
---
source: ctui-components/src/table.rs
assertion_line: 613
expression: result
---
Item      
──────────
 First    
Second    
Third
