ctui-components/src/snapshots/ctui_components__table__tests__table_selection_last.snap
---
source: ctui-components/src/table.rs
assertion_line: 639
expression: result
---
Item      
──────────
First     
Second    
 Third
