ctui-components/src/snapshots/ctui_components__table__tests__table_selection_middle.snap
---
source: ctui-components/src/table.rs
assertion_line: 626
expression: result
---
Item      
──────────
First     
 Second   
Third
