ctui-components/src/snapshots/ctui_components__table__tests__table_with_rows.snap
---
source: ctui-components/src/table.rs
assertion_line: 588
expression: result
---
ID   Name      Age  
────────────────────
1    Alice     25   
2    Bob       30   
3    Charlie   35
