ctui-components/src/snapshots/ctui_components__table__tests__table_with_sort.snap
---
source: ctui-components/src/table.rs
expression: result
---
Name ▲    Value   
──────────────────
Alice     10      
Bob       20      
Charlie   30
